// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages periodValidity should render correctly 1`] = `
<Component
  description="Period Validity selection page of the Fares Data Build Tool"
  errors={Array []}
  title="Period Validity - Fares Data Build Tool"
>
  <CsrfForm
    action="/api/periodValidity"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={Array []}
    />
    <div
      className="govuk-form-group "
    >
      <fieldset
        aria-describedby="period-validity-page-heading"
        className="govuk-fieldset"
      >
        <legend
          className="govuk-fieldset__legend govuk-fieldset__legend--l"
        >
          <h1
            className="govuk-fieldset__heading"
            id="period-validity-page-heading"
          >
            When does the product expire?
          </h1>
        </legend>
        <span
          className="govuk-hint"
          id="period-validity-hint"
        >
          We need to know the time that this product would be valid until
        </span>
        <FormElementWrapper
          errorClass="govuk-radios--error"
          errorId="period-end-calendar"
          errors={Array []}
        >
          <div
            className="govuk-radios"
          >
            <div
              className="govuk-radios__item"
            >
              <input
                className="govuk-radios__input  "
                id="period-end-calendar"
                name="periodValid"
                type="radio"
                value="endOfCalendarDay"
              />
              <label
                className="govuk-label govuk-radios__label govuk-label--s"
                htmlFor="period-end-calendar"
              >
                At the end of a calendar day
              </label>
              <span
                className="govuk-hint govuk-radios__hint"
                id="period-end-calendar-hint"
              >
                For example, a ticket purchased at 3pm would be valid until midnight on its day of expiry
              </span>
            </div>
            <div
              className="govuk-radios__item"
            >
              <input
                className="govuk-radios__input  "
                id="period-twenty-four-hours"
                name="periodValid"
                type="radio"
                value="24hr"
              />
              <label
                className="govuk-label govuk-radios__label govuk-label--s"
                htmlFor="period-twenty-four-hours"
              >
                At the end of a 24 hour period from purchase
              </label>
              <span
                className="govuk-hint govuk-radios__hint"
                id="period-twenty-four-hours-hint"
              >
                For example, a ticket purchased at 3pm will be valid until 3pm on its day of expiry
              </span>
            </div>
          </div>
        </FormElementWrapper>
      </fieldset>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;

exports[`pages periodValidity should render error messaging when errors are passed 1`] = `
<Component
  description="Period Validity selection page of the Fares Data Build Tool"
  errors={
    Array [
      Object {
        "errorMessage": "Choose an option regarding your period ticket validity",
        "id": "period-validity-error",
      },
    ]
  }
  title="Period Validity - Fares Data Build Tool"
>
  <CsrfForm
    action="/api/periodValidity"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "Choose an option regarding your period ticket validity",
            "id": "period-validity-error",
          },
        ]
      }
    />
    <div
      className="govuk-form-group govuk-form-group--error"
    >
      <fieldset
        aria-describedby="period-validity-page-heading"
        className="govuk-fieldset"
      >
        <legend
          className="govuk-fieldset__legend govuk-fieldset__legend--l"
        >
          <h1
            className="govuk-fieldset__heading"
            id="period-validity-page-heading"
          >
            When does the product expire?
          </h1>
        </legend>
        <span
          className="govuk-hint"
          id="period-validity-hint"
        >
          We need to know the time that this product would be valid until
        </span>
        <FormElementWrapper
          errorClass="govuk-radios--error"
          errorId="period-end-calendar"
          errors={
            Array [
              Object {
                "errorMessage": "Choose an option regarding your period ticket validity",
                "id": "period-validity-error",
              },
            ]
          }
        >
          <div
            className="govuk-radios"
          >
            <div
              className="govuk-radios__item"
            >
              <input
                className="govuk-radios__input govuk-input--error "
                id="period-end-calendar"
                name="periodValid"
                type="radio"
                value="endOfCalendarDay"
              />
              <label
                className="govuk-label govuk-radios__label govuk-label--s"
                htmlFor="period-end-calendar"
              >
                At the end of a calendar day
              </label>
              <span
                className="govuk-hint govuk-radios__hint"
                id="period-end-calendar-hint"
              >
                For example, a ticket purchased at 3pm would be valid until midnight on its day of expiry
              </span>
            </div>
            <div
              className="govuk-radios__item"
            >
              <input
                className="govuk-radios__input govuk-input--error "
                id="period-twenty-four-hours"
                name="periodValid"
                type="radio"
                value="24hr"
              />
              <label
                className="govuk-label govuk-radios__label govuk-label--s"
                htmlFor="period-twenty-four-hours"
              >
                At the end of a 24 hour period from purchase
              </label>
              <span
                className="govuk-hint govuk-radios__hint"
                id="period-twenty-four-hours-hint"
              >
                For example, a ticket purchased at 3pm will be valid until 3pm on its day of expiry
              </span>
            </div>
          </div>
        </FormElementWrapper>
      </fieldset>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;
